force-app/main/default/objects/Qualification_Answer__c/Qualification_Answer__c.object-meta.xml
<CustomObject>
    <label>Qualification Answer</label>
    <nameField>
        <displayFormat>QA-{0000000}-{YYYY}</displayFormat>
        <label>QA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>