force-app/main/default/objects/Qualification_Answer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Qualification Answers</relationshipLabel>
    <relationshipName>Qualification_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>