force-app/main/default/objects/Qualification_Answer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Qualification Answers</relationshipLabel>
    <relationshipName>Qualification_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>