force-app/main/default/objects/Qualification_Answer__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Qualification Answers</relationshipLabel>
    <relationshipName>Qualification_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>