force-app/main/default/objects/Qualification_Answer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Qualification Answers</relationshipLabel>
    <relationshipName>Qualification_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>