force-app/main/default/objects/Qualification_Answer__c/fields/Qualification_Question__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Qualification Question</label>
    <referenceTo>Qualification_Question__c</referenceTo>
    <relationshipLabel>Qualification Answers</relationshipLabel>
    <relationshipName>Qualification_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>